feat: DTNFP-238 api unfriend
