# routes/api.php
@@ -114,6 +114,7 @@ Route::middleware('auth:api')->group(function () {
     Route::delete('/delete-request/{sender}', [FriendController::class, 'DeleteFriendRequest'])->name('friend.delete');
     Route::get('/friend-list', [FriendController::class, 'FetchAllFriend'])->name('friend.list');
     Route::get('/friend-list-request', [FriendController::class, 'listFriendRequest']);
+    Route::delete('/unfriend/{friend}', [FriendController::class, 'unfriend']);
 
     Route::group(['prefix' => 'admin', 'middleware' => 'scope:admin'], function () {
         //User Management
